[package]
name = "morpho-api-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy =  {version = "2.1.0", features = [
    "providers",
    "rpc-types",
    "rpc-client",
    "rpc-client-ws",
    "transport-ws",
    "transport-http",
    "signers",
    "signer-local",
    "network",
    "provider-ws",
    "pubsub",
] }
alloy-primitives = "1.6.0"
anyhow = "1.0.103"
dotenvy = "0.15.7"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }